...

const moreLabel = "More";

const artistTabs = [
  {
    id: 1,
    name: "Overview",
    label: "Overview",
    component: ArtistOverviewStack,
    activeIcon: overviewActive,
    inActiveIcon: overviewInActive,
  },
  {
...
    return <ArtistOnboarding />;
  }

  return (
    <Stack.Navigator screenOptions={{ headerShown: false }}>
      <Stack.Screen
        name="Artist"
        component={wrapWithHighRisk(ArtistBottomTabWrapper)}
      />
      <Stack.Screen
        name="ShipmentTrackingScreen"
        component={wrapWithLowRisk(ShipmentTrackingScreen)}
      />
...
