...
import GalleryArtworksListing from "screens/galleryArtworksListing/GalleryArtworksListing";
import GalleryOrder from "screens/galleryOrder/GalleryOrder";
import GalleryOrdersListing from "screens/galleryOrders/GalleryOrdersListing";
import ChangeGalleryPassword from "screens/galleryProfileScreens/changeGalleryPassword/ChangeGalleryPassword";
import EditGalleryProfile from "screens/galleryProfileScreens/editGalleryProfile/EditGalleryProfile";
import GalleryProfile from "screens/galleryProfileScreens/galleryProfile/GalleryProfile";
import Overview from "screens/overview/Overview";
import GetStartedWithStripe from "screens/stripeScreens/getStartedWithStripe/GetStartedWithStripe";
import Subscriptions from "screens/subscriptions/Subscriptions";
import UploadArtwork from "screens/uploadArtwork/UploadArtwork";
import { getAccountID } from "services/stripe/getAccountID";
import { utils_getAsyncData } from "utils/utils_asyncStorage";
import { useNavigation } from "@react-navigation/native";
...
      </Stack.Navigator>
    );

  return (
    <Stack.Navigator screenOptions={{ headerShown: false }}>
      <Stack.Screen
        name="Gallery"
        component={GalleryTabNavigationScreens}
        options={hideHeader}
      />
      <Stack.Screen name={screenName.artwork} component={Artwork} />
      <Stack.Screen
        name={screenName.gallery.uploadArtwork}
...
