import { createNativeStackNavigator } from "@react-navigation/native-stack";

import Overview from "#screens/marketplace/overview/Overview";
import {
  primaryTabRootNavigatorScreenOptions,
  primaryTabRootScreenHeaderOptions,
} from "#navigation/config/primaryTabNativeStackHeader";

export type GalleryOverviewStackParamList = {
...
