...
        onBlur={handleBlur}
        onCountrySelect={handleCountrySelect}
        onStateSelect={handleStateSelect}
        onCitySelect={(item) => setCity(item.value)}
        onAddressChange={setAddress}
        onZipChange={setZipCode}
        addressLabel="Collector's Address"
        addressPlaceholder="Input your residential address here"
      />

      <AddressVerificationActions
        isLoading={isLoading}
        isDisabled={!checkIsFormValid()}
...
