...
      <View style={tw`gap-5`}>
        <Input
          label="Full name"
          keyboardType="default"
          onInputChange={setName}
          handleBlur={() => handleBlur("name")}
          placeHolder="Enter your full name"
          value={individualRegisterData.name}
          errorMessage={touched.name ? formErrors.name : ""}
        />
        <Input
          label="Email address"
          keyboardType="email-address"
          onInputChange={setEmail}
          handleBlur={() => handleBlur("email")}
          placeHolder="Enter your email address"
          value={individualRegisterData.email}
          errorMessage={touched.email ? formErrors.email : ""}
        />
        <PasswordInput
          label="Password"
          onInputChange={setPassword}
          handleBlur={() => handleBlur("password")}
          placeHolder="Enter password"
          value={individualRegisterData.password}
          errorMessage={touched.password ? formErrors.password : ""}
          textContentType="newPassword"
        />
        <PasswordInput
          label="Confirm password"
          onInputChange={setConfirmPassword}
          handleBlur={() => handleBlur("confirmPassword")}
          placeHolder="Enter password again"
          value={individualRegisterData.confirmPassword}
          errorMessage={
            touched.confirmPassword ? formErrors.confirmPassword : ""
          }
          textContentType="newPassword"
        />
...
